# simple-rust-template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  justfile  licenserc.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cd.yml  ci.yml
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docker/: Dockerfile
examples/: hello.rs
