[workspace]
resolver = "2"
members = ["crates/cmd", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["crrow"]

[workspace.dependencies]
derive_more = { version = "^1.0.0", features = ["debug"] }
futures = "^0.3"
futures-util = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
snafu = "^0.8"
tokio = { version = "^1.38", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "^0.1"
tonic = "^0.12"
tracing = "^0.1"
